feat(auth): add register & login
