# src/features/auth/dtos/login.dto.ts
@@ -1,0 +1,11 @@
+import { IsNotEmpty, IsString } from "class-validator";
+
+export class LoginDTO {
+  @IsString()
+  @IsNotEmpty()
+  username: string;
+
+  @IsString()
+  @IsNotEmpty()
+  password: string;
+}
