# src/features/auth/dtos/register.dto.ts
@@ -1,0 +1,15 @@
+import { IsNotEmpty, IsString } from "class-validator";
+
+export class RegisterDTO {
+  @IsString()
+  @IsNotEmpty()
+  name: string;
+
+  @IsString()
+  @IsNotEmpty()
+  username: string;
+
+  @IsString()
+  @IsNotEmpty()
+  password: string;
+}
