# src/features/auth/entities/auth.entity.ts
@@ -1,0 +1,8 @@
+export interface TokenData {
+  token: string;
+  expiresIn: number;
+}
+
+export interface DataStoredInToken {
+  _id: string;
+}
