# src/features/auth/entities/user.entity.ts
@@ -1,0 +1,8 @@
+export interface User {
+  _id: string;
+  name: string;
+  avatar?: string;
+  username: string;
+  password: string;
+  createdAt: Date;  
+}
