# src/features/auth/schemas/user.schema.ts
@@ -1,10 +1,13 @@
-import { User } from '@src/shared/interfaces/user';
+
+import { User } from '@src/features/auth/entities';
 import mongoose, { Document, Schema } from 'mongoose';
 
 export const userSchema = new Schema<User>({
   name: String,
-  email: String,
-  avatar: String
+  avatar: String,
+  username: String,
+  password: String,
+  createdAt: Date  
 });
 
 const userModel = mongoose.model<User & Document>('users', userSchema);
